# kalshi-poly-arb

./: .env.example  .gitignore  PREDICTION_MARKET_ARB_DETECTOR_PLAN.md  README.md  STATE_SCHEMA.md  config.yaml  manual_overrides.yaml  pyproject.toml
src/arbdetector/: __init__.py  config.py  main.py  pipeline.py  schema.py
src/arbdetector/alerting/: __init__.py  console.py  format.py  telegram.py
src/arbdetector/clients/: __init__.py  _http.py  base.py  kalshi.py  polymarket.py
src/arbdetector/engine/: __init__.py  bookwalk.py  signal.py
src/arbdetector/fees/: __init__.py  base.py  kalshi_fees.py  polymarket_fees.py
src/arbdetector/matching/: __init__.py  adjudicator.py  cache.py  recall.py
src/arbdetector/store/: __init__.py  sqlite.py  views.sql
src/arbdetector/tracking/: __init__.py  ids.py  runstate.py  stages.py  statusboard.py  structlog.py
tests/: conftest.py  test_adjudicator_schema.py  test_alerting.py  test_bookwalk_slippage.py  test_config.py  test_fees_kalshi.py  test_fees_polymarket.py  test_ids_deterministic.py  test_kalshi_client.py  test_kalshi_orderbook_reconstruction.py  test_main_loop.py  test_polymarket_client.py  test_recall.py  test_runstate_serialization.py  test_signal_both_directions.py  test_stage_funnel.py  test_store_views.py
